--- a/Project1_API_Call.ipynb
+++ b/Project1_API_Call.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +209,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,9 +217,7 @@
     "\n",
     "\n",
     "###  Is Tobacco usage increases or decreases over the time in USA?\n",
-    "* Tobacco usage has been significantly decreased each year from 2011 to 2018, as numerous actions are implementing to reduce tobacco use to the point that it is no longer a public health problem for the Nation ( \"Healthy People 2020\" - The goal is to reduce illness, disability, and dealth realted to tobacco use and secondhand smoke exposre. ) \n",
-    "\n",
-    "\n"
+    "* Tobacco usage has been significantly decreasing each year from 2011 to 2018, as numerous actions are implementing by CDC and state health department to reduce tobacco use to the point that it is no longer a public health problem for the Nation ( \"Healthy People 2020\" - The goal is to reduce illness, disability, and death related to tobacco use and secondhand smoke exposer).\n"
    ]
   },
   {
